--- a/frontend/src/app/result-page/result-page.component.html
+++ b/frontend/src/app/result-page/result-page.component.html
@@ -1,8 +1,4 @@
-<p>
-    result-page works!
-    <button (click)="log()" >foo</button>
-</p>
-
+<p>Results</p>
 <div *ngFor='let result of results'>
     <div>{{result.title}}</div>
     <div>{{result.snippet}}</div>
