--- a/frontend/src/app/result-page/result-page.component.html
+++ b/frontend/src/app/result-page/result-page.component.html
@@ -1,8 +1,13 @@
-<p>Results</p>
-<mat-list>
-<mat-list-item *ngFor='let result of results'>
-    <a class="result-title" href="{{result.link}}" matLine>{{result.title}}</a>
-    <a class="result-link" href="{{result.link}}" matLine>{{result.link}}</a>
-    <div matLine>{{result.snippet}}</div>
-</mat-list-item>
-</mat-list>
+<div *ngIf="badQuery">
+    <app-not-found></app-not-found>
+</div>
+<div *ngIf="!badQuery">
+    <p>Results</p>
+    <mat-list>
+        <mat-list-item *ngFor='let result of results'>
+            <a class="result-title" href="{{result.link}}" matLine>{{result.title}}</a>
+            <a class="result-link" href="{{result.link}}" matLine>{{result.link}}</a>
+            <div matLine>{{result.snippet}}</div>
+        </mat-list-item>
+    </mat-list>
+</div>
