--- a/frontend/src/app/result-page/result-page.component.css
+++ b/frontend/src/app/result-page/result-page.component.css
@@ -5,3 +5,15 @@
 .result-link {
     color: green;
 }
+
+.query-form {
+  min-width: 150px;
+  width: 100%;
+  text-align: center;
+}
+
+.full-width {
+  min-width: 150px;
+  max-width: 600px;
+  width: 80%;
+}
