--- a/frontend/src/app/result-page/result-page.component.html
+++ b/frontend/src/app/result-page/result-page.component.html
@@ -2,7 +2,14 @@
     <app-not-found></app-not-found>
 </div>
 <div *ngIf="!badQuery">
-    <p>Results</p>
+    <mat-toolbar>
+        <div class="query-form">
+            <mat-form-field class="full-width">
+                <input matInput [(ngModel)]="query" (keyup.enter)="submitQuery(query)" placeholder="Search for...">
+            </mat-form-field>
+            <button mat-raised-button color="primary" (click)="submitQuery(query)">Search</button>
+        </div>
+    </mat-toolbar>
     <mat-list>
         <mat-list-item *ngFor='let result of results'>
             <a class="result-title" href="{{result.link}}" matLine>{{result.title}}</a>
