--- a/frontend/src/app/result-page/result-page.component.css
+++ b/frontend/src/app/result-page/result-page.component.css
@@ -6,6 +6,12 @@
     color: green;
 }
 
+#result-list-wrapper {
+  min-width: 150px;
+  max-width: 600px;
+  margin: 0 auto;
+}
+
 .query-form {
   min-width: 150px;
   width: 100%;
@@ -16,4 +22,5 @@
   min-width: 150px;
   max-width: 600px;
   width: 80%;
+  margin: 0 auto;
 }
