--- a/frontend/src/app/result-page/result-page.component.html
+++ b/frontend/src/app/result-page/result-page.component.html
@@ -5,7 +5,7 @@
     <mat-toolbar>
         <div class="query-form">
             <mat-form-field class="full-width">
-                <input matInput [(ngModel)]="query" (keyup.enter)="submitQuery(query)" placeholder="Search for...">
+                <input matInput [(ngModel)]="query" (keyup.enter)="submitQuery(query)">
             </mat-form-field>
             <button mat-raised-button color="primary" (click)="submitQuery(query)">Search</button>
         </div>
