Wraps the button at the end of the results (Closes #25)

--- a/frontend/src/app/result-page/result-page.component.html
+++ b/frontend/src/app/result-page/result-page.component.html
@@ -21,19 +21,18 @@
                 <div matLine>{{result.snippet}}</div>
             </mat-list-item>
         </mat-list>
-
-        <span *ngIf="hasPrev">
-            <a  mat-button routerLink="/search" [queryParams]="{q : query, p : prevPage}">Previous Page</a>
+        
+        <span class="previous-button" *ngIf="hasPrev">
+            <a  mat-raised-button color="primary" routerLink="/search" [queryParams]="{q : query, p : prevPage}">Previous Page</a>
         </span>
-        <span *ngIf="!hasPrev">
-            <button mat-button disabled>Previous Page</button>
+        <span class="previous-button" *ngIf="!hasPrev">
+            <button mat-raised-button disabled>Previous Page</button>
         </span>
-
-        <span *ngIf="hasNext">
-            <a mat-button routerLink="/search" [queryParams]="{q : query, p : nextPage}">Next Page</a>
+        <span class="next-button" *ngIf="hasNext">
+            <a mat-raised-button color="primary" routerLink="/search" [queryParams]="{q : query, p : nextPage}">Next Page</a>
         </span>
-        <span *ngIf="!hasNext">
-            <button mat-button disabled>Next Page</button>
+        <span class="next-button" *ngIf="!hasNext">
+            <button mat-raised-button disabled>Next Page</button>
         </span>
 
     </div>
