Fixed landing page font

--- a/frontend/src/app/landing-page/landing-page.component.css
+++ b/frontend/src/app/landing-page/landing-page.component.css
@@ -2,6 +2,7 @@
     margin-top: 20vh;
     text-align: center;
     font-size: 75px;
+    font-family: 'Inconsolata', monospace;
 }
 
 .query-form {
