--- a/frontend/src/app/landing-page/landing-page.component.html
+++ b/frontend/src/app/landing-page/landing-page.component.html
@@ -1,6 +1,7 @@
+<link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
 <div id="logo">
     Axxelerate
-</div>
+</div><br>
 <div class="query-form">
     <mat-form-field class="full-width">
         <input matInput [(ngModel)]="query" (keyup.enter)="submitQuery(query)" placeholder="Search for...">
